--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "dace"
-version = "0.1.1"
+version = "0.2.0"
 authors = ["Giovanni Purpura"]
 edition = "2021"
 description = "Rust wrapper of DACE, the Differential Algebra Computational Toolbox."
@@ -35,7 +35,7 @@ impl_ops = "0.1"
 paste = "1.0"
 num-traits = "0.2"
 ndarray = "0.15"
-ndarray-linalg = { version = "0.15", features = ["intel-mkl-static"] }
+ndarray-linalg = "0.16"
 
 [build-dependencies]
 cmake = "0.1"
