--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "dace"
-version = "0.2.0"
+version = "0.2.1"
 authors = ["Giovanni Purpura"]
 edition = "2021"
 description = "Rust wrapper of DACE, the Differential Algebra Computational Toolbox."
@@ -31,7 +31,7 @@ exclude = [
     "*.f"]
 
 [dependencies]
-impl_ops = "0.1"
+auto_ops = "0.3"
 paste = "1.0"
 num-traits = "0.2"
 ndarray = "0.15"
